# fast_api_cookie_cutter_template

./: ReadMe.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  DockerFile  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/core/: app_insigths.py  auth.py  config.py  containers.py  dependencies.py  logging_config.py
{{cookiecutter.project_slug}}/app/middlewares/: context_middleware.py  request_context.py
{{cookiecutter.project_slug}}/app/models/: user.py
{{cookiecutter.project_slug}}/app/routes/: __init__.py  home.py
{{cookiecutter.project_slug}}/app/routes/tests/: test_home.py
{{cookiecutter.project_slug}}/app/services/: user_service.py
{{cookiecutter.project_slug}}/app/services/tests/: test_user_service.py
